# picocolors_rs

./: Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  justfile  tea.yaml
.github/workflows/: CI.yml
benches/: bench.rs
src/: lib.rs  main.rs
tests/: colors.rs
