[package]
name = "picocolors_rs"
description = "rust version of picocolors"
keywords = [
  "cli",
  "colors",
]
version = "0.0.1"
license-file = "LICENSE"
edition = "2021"
readme = "README.md"
repository = "https://github.com/SoonIter/picocolors_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
