[package]
name = "picocolors"
description = "rust version of picocolors"
keywords = ["cli", "colors"]
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/SoonIter/picocolors_rs"
authors = ["SoonIter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
